immage-size-adapt
зробив резинову фотку

для контейнера
.header-bottom {
max-height:   340px;
на сторінці
<header class="header-bottom"> <img src="f1.png" alt="add" width="100%"
height="100%" />

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="add"><img src="icon/plus.png" alt="add  " /> </div>
         </header>
 
-        <header class="header-bottom"> <img src="f1.png" alt="add  " />
+        <header class="header-bottom"> <img src="f1.png" alt="add" width="100%" height="100%" />
 
             <div class="user-data">
 
