--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="author" content="Boomer" />
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <script src="js.js"></script>
+    <link href="style/style.css" rel="stylesheet" type="text/css">
+    <script src="js/js.js"></script>
 
     <title>test1</title>
 
@@ -25,12 +25,12 @@
             <div class="add"><img src="icon/plus.png" alt="add  " /> </div>
         </header>
 
-        <header class="header-bottom"> <img src="f1.png" alt="add" width="100%" height="100%" />
+        <header class="header-bottom"> <img src="img/f1.png" alt="add" width="100%" height="100%" />
 
             <div class="user-data">
 
 
-                <img src="Untitled.png" width="180" height="180" />
+                <img src="img/Untitled.png" width="180" height="180" />
                 <p class="user_name"> Джон скофілд </p>
                 <p class="user_karma"> рейтинг </p>
                 <p class="user_menu">
@@ -52,13 +52,13 @@
 
             <div id="switch-on">
                 <span class="active"> All notification  </span>
-                <a href="javascript:void(0)" onclick="testBlock()"> <img src="menu1.png" /> </a>
+                <a href="javascript:void(0)" onclick="testBlock()"> <img src="icon/menu1.png" /> </a>
                 <span class="active-no"> Most important </span>
             </div>
             <!-- hidden div  -->
             <div id="switch-off" style="display: none;">
                 <span class="active-no"> All notification  </span>
-                <a href="javascript:void(0)" onclick="testBlock()"> <img src="menu2.png" /> </a>
+                <a href="javascript:void(0)" onclick="testBlock()"> <img src="icon/menu2.png" /> </a>
                 <span class="active"> Most important </span>
             </div>
 
