--- a/index.html
+++ b/index.html
@@ -17,12 +17,20 @@
     <div class="wriper">
 
         <header class="header-top">
-            <div class="menu-humburger"> <img src="icon/menu.png" alt="menu" width="30px" height="10px" /> </div>
+            <div class="menu-humburger">
+                <a href="#"><img src="icon/menu.png" alt="menu" width="30px" height="10px" /> </a>
+            </div>
             <div class="logo">upparent</div>
-            <div class="user-icon"><img src="http://autokadabra.ru/system/uploads/users/1/1938/small.png" alt="avatar  " /> </div>
+            <div class="user-icon">
+                <img src="img/Untitled.png" alt="avatar  " />
+            </div>
             <div class="helo-usen-name">Привіт! ти зайшов
                 <br /> як <span id="user-name">Анька</span> </div>
-            <div class="add"><img src="icon/plus.png" alt="add  " /> </div>
+            <div class="add">
+                <a href="#">
+                    <img src="icon/plus.png" alt="add  " />
+                </a>
+            </div>
         </header>
 
         <header class="header-bottom"> <img src="img/f1.png" alt="add" width="100%" height="100%" />
@@ -72,8 +80,8 @@
         <section>
             <article>
                 <div class="img-feed">
-                    <img src="https://pp.vk.me/c624029/v624029991/256a8/Cumeg2_4HfQ.jpg" alt="foto" class="user_foto">
-                    <div class="user-icon"><img src="http://autokadabra.ru/system/uploads/users/1/1938/small.png" alt="avatar  " /> </div>
+                    <img src="img/image.png" alt="foto" class="user_foto">
+                    <div class="user-icon"><img src="img/Untitled.png" alt="avatar  " /> </div>
                 </div>
 
                 <div class="center-feed">
