додав іконки для карток
додав іконки для карток

--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                 </div>
 
                 <div class="close-icon-feed">
-                    <br/> x
+                    <br/>  <a href="#"> <img src="icon/x.png"  ></a> 
                     <br/>
                     <br/>
                     <br/>
                     <br/>
-                    <br/> &#64;
+                    <br/>  <a href="#"><img src="icon/options.svg"  ></a> 
 
 
                 </div>
