резина до 810пк
привязав юзердату до нижньї границі (резина до 810пк)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="user-data">
 
 
-                <img src="img/Untitled.png" width="180" height="180" />
+                <img src="img/Untitled.png" width="100%" height="100%" />
 
                 <p class="user_name"> Джон скофілд </p>
                 <p class="user_karma"> рейтинг </p>
