--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
         <header class="header-top">
             <div class="menu-humburger">
-                <a href="#"><img src="icon/menu.png" alt="menu" width="30px" height="10px" /> </a>
+                <a href="#"><img src="icon/menu.png" alt="menu"   /> </a>
             </div>
-            <div class="logo">upparent</div>
+            <div class="logo">  <img src="icon/Logo.png"   /></div>
             <div class="user-icon">
                 <img src="img/Untitled.png" alt="avatar  " />
             </div>
-            <div class="helo-usen-name">Привіт! ти зайшов
-                <br /> як <span id="user-name">Анька</span> </div>
+            <div class="helo-usen-name">Hi! You signed as 
+                <br /> як <span id="user-name">Anna</span> </div>
             <div class="add">
                 <a href="#">
                     <img src="icon/plus.png" alt="add  " />
@@ -33,7 +33,7 @@
             </div>
         </header>
 
-        <header class="header-bottom"> <img src="img/f1.png" alt="add" width="100%" height="100%" />
+        <header class="header-bottom"> <img src="img/ph.png"  width="100%" height="100%"  />
 
             <div class="user-data">
 
