--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                     <div class="icons">
 
                         <img src="icon/4.Bookmarks.svg"> <span> 22</span>
-                        <img src="icon/4.Bookmarks.svg"> <span> 22</span>
-                        <img src="icon/4.Bookmarks.svg"> <span> 22</span>
+                        <img src="icon/3.Comments.svg"> <span> 22</span>
+                        <img src="icon/5.Events.svg"> <span> 22</span>
 
 
 
@@ -136,6 +136,7 @@
 
 
             <article> </article>
+            
 
         </section>
 
