--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="img-feed">
                     <img src="img/image.png" alt="foto" class="user_foto">
                     <div class="circl-icon">
-                        <div class="user-icon"><img src="img/Untitled.png" alt="avatar  " /> </div>
+                        <div class="user-icon-big"><img src="img/Untitled.png" alt="avatar  " /> </div>
                     </div>
                 </div>
 
