--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </header>
 
-        <header class="header-bottom"> <img src="img/ph.png" height="100%" />
+        <header class="header-bottom"> <img src="img/ph.png" width="100%" height="100%" />
 
             <div class="user-data">
 
