--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@
 
                     <div class="icons">
 
-                        <img src="icon/4.Bookmarks.svg"> <span> 22</span>
-                        <img src="icon/3.Comments.svg"> <span> 7</span>
-                        <img src="icon/5.Events.svg"> <span> 3</span>
+                        <div class="Bookmarks">  <img src="icon/4.Bookmarks.svg">     </div>   <span> 22</span>
+                        <div class="Comments">  <img src="icon/3.Comments.svg">      </div>   <span> 7</span>
+                        <div class="Events">  <img src="icon/5.Events.svg">          </div>   <span> 3</span>
+                        
                     </div>
 
                 </div>
