--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             <div id="switch-on">
                 <div class="left-filter">
-                    <span class="active" href="javascript:void(0)" onclick="testBlock()">All notification</span>
+                    <span class="active" href="javascript:void(0)" onclick="testBlock()">All notifications</span>
                     <div class="select_line"></div>
                 </div>
 
@@ -89,7 +89,7 @@
             <!-- hidden div  -->
             <div id="switch-off" style="display:none;">
                 <div class="left-filter">
-                    <span class="active-no" href="javascript:void(0)" onclick="testBlock()"> All notification  </span>
+                    <span class="active-no" href="javascript:void(0)" onclick="testBlock()"> All notifications  </span>
                 </div>
                 <div class="centr"> </div>
 
